--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,24 @@
 {
-    "name": "nurigo/php-sdk",
-    "description": "Send message using PHP and RestAPI",
+    "name": "hosy/php-sdk-test",
+    "description": "Send message using PHP and RestAPI[TEST]",
     "type": "library",
-    "license": "GPL v2",
+    "keywords": ["coolsms", "nurigo", "sms", "message", "messages", "cool", "textmessage", "mobile", "cellphone", "phone", "mms", "lms", "global"],
+    "license": "MIT",
+    "homepage": "http://coolsms.co.kr",
     "authors": [
         {
             "name": "nurigo",
-            "email": "contact@nurigo.net"
+            "email": "contact@nurigo.net",
+            "homepage": "http://coolsms.co.kr",
+            "role": "Developer"
         }
     ],
-    "minimum-stability": "dev",
-    "require": {}
+    "require": {
+        "php": ">=5.4.0"
+    },
+	"autoload": {
+		"psr-4": {
+            "Coolsms\\": "app/Coolsms"
+        }
+	}
 }
