--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "coolsms/php-sdk-test",
+	"name": "coolsms/php-sdk",
 	"description": "Send message using PHP and RestAPI[TEST]",
 	"type": "library",
 	"keywords": ["coolsms", "nurigo", "sms", "message", "messages", "cool", "textmessage", "mobile", "cellphone", "phone", "mms", "lms", "global"],
@@ -14,7 +14,7 @@
 		}
 	],
 	"require": {
-		"php": ">=5.4.0"
+		"php": ">=5.5.0"
 	},
 	"autoload": {
 		"psr-4": {
